# finalysis

./: CMakeLists.txt  README.md
src/: aylien_data.cpp  aylien_data.h  base64.cpp  base64.h  common_utils.cpp  common_utils.h  data_fetcher.cpp  data_fetcher.h  data_processor.cpp  data_processor.h  main.cpp  risk_assessor.cpp  risk_assessor.h  sentiment_analyzer.cpp  sentiment_analyzer.h  trend_analyzer.cpp  trend_analyzer.h  twitter_data.cpp  twitter_data.h  visualizer.cpp  visualizer.h
web/: index.html  particles.json  script.js  style.css
